--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="update(user)" class="btn btn-primary btn-block">Update</a>
+                        <a href="" ng-click="update(user)" class="btn btn-primary btn-block">Update</a>
                     </div>
 
                 </div>
