--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <a ng-click="register(user)" class="btn btn-primary btn-block">Register</a>
+                        <a href="" ng-click="register(user)" class="btn btn-primary btn-block">Register</a>
                         <!--<button type="submit" class="btn btn-default btn-block">Register</button>-->
                     </div>
 
