--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,4 +1,4 @@
- <ul class="nav nav-sidebar">
+ <ul class="nav nav-sidebar" ng-controller="SidebarController">
         <li ng-class="{'active': location.url() == '/home'}">
             <a href="#/home">Home <span class="sr-only">(current)</span></a>
         </li>
