--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -6,13 +6,15 @@
                 <div class="form-group">
                     <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
+                        <input type="text" ng-model="user.username"
+                               class="form-control" id="username" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password">
+                        <input type="password" ng-model="user.password"
+                               class="form-control" id="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
