--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -7,31 +7,38 @@
                 <div class="form-group">
                     <label for="username" class="col-sm-2">Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username" ng-readonly="readonly">
+                        <input type="text"
+                               ng-model="user.username" class="form-control" id="username"
+                               placeholder="Username" ng-readonly="readonly">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-2">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" ng-model="user.password" class="form-control" id="password" placeholder="Password">
+                        <input type="password"
+                               ng-model="user.password" class="form-control"
+                               id="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="fname" class="col-sm-2">First Name:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.firstname" class="form-control" id="fname" placeholder="First Name">
+                        <input type="text" ng-model="user.firstname"
+                               class="form-control" id="fname" placeholder="First Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="lname" class="col-sm-2">Last Name:</label>
                     <div class="col-sm-10">
-                        <input type="text" ng-model="user.lastname" class="form-control" id="lname" placeholder="Last Name">
+                        <input type="text" ng-model="user.lastname"
+                               class="form-control" id="lname" placeholder="Last Name">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="email" class="col-sm-2">Email:</label>
                     <div class="col-sm-10">
-                        <input type="email" ng-model="user.emailId" class="form-control" id="email" placeholder="Email">
+                        <input type="email" ng-model="user.emailId"
+                               class="form-control" id="email" placeholder="Email">
                     </div>
                 </div>
                 <div class="form-group">
