--- a/public/project-angular/views/users/profile.view.html
+++ b/public/project-angular/views/users/profile.view.html
@@ -1,1 +1,43 @@
-<h2>Profile</h2>
+<div id="wrapper">
+    <!-- Sidebar -->
+    <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand">
+                <a href="#">My Profile</a>
+            </li>
+            <li>
+                <a href="#">Overview</a>
+            </li>
+            <li>
+                <a href="#">Favorite Places</a>
+            </li>
+            <li>
+                <a href="#">Overview</a>
+            </li>
+            <li>
+                <a href="#">Likes</a>
+            </li>
+            <li>
+                <a href="#">Dislikes</a>
+            </li>
+            <li>
+                <a href="#">Followers</a>
+            </li>
+            <li>
+                <a href="#">Following</a>
+            </li>
+        </ul>
+    </div>
+    <!-- /#sidebar-wrapper -->
+
+    <button ng-click="toggleMenu()" class="btn btn-default" id="menu-toggle">
+        <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
+    </button>
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+
+    </div>
+    <!-- /#page-content-wrapper -->
+
+</div>
+
