--- a/public/project-angular/views/users/profile.view.html
+++ b/public/project-angular/views/users/profile.view.html
@@ -1,152 +1,53 @@
-<div id="wrapper">
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li class="sidebar-brand">
-                <a href="#/profile">My Profile</a>
-            </li>
-            <li>
-                <a href="#/profile/reviews">Overview</a>
-            </li>
-            <li>
-                <a href="#">Favorite Places</a>
-            </li>
-            <li>
-                <a href="#">Likes</a>
-            </li>
-            <li>
-                <a href="#">Dislikes</a>
-            </li>
-            <li>
-                <a href="#">Followers</a>
-            </li>
-            <li>
-                <a href="#">Following</a>
-            </li>
-        </ul>
+
+<div class="container-fluid" ng-controller="ProfileController">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <h1 class="page-header">Profile</h1>
+            <form class="form-horizontal" action="profile.view.html">
+                <div class="form-group">
+                    <label for="username" class="col-sm-2">Username:</label>
+                    <div class="col-sm-10">
+                        <input type="text"
+                               ng-model="user.username" class="form-control" id="username"
+                               placeholder="Username" ng-readonly="readonly">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-2">Password:</label>
+                    <div class="col-sm-10">
+                        <input type="password"
+                               ng-model="user.password" class="form-control"
+                               id="password" placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="fname" class="col-sm-2">First Name:</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="user.firstname"
+                               class="form-control" id="fname" placeholder="First Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="lname" class="col-sm-2">Last Name:</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="user.lastname"
+                               class="form-control" id="lname" placeholder="Last Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="email" class="col-sm-2">Email:</label>
+                    <div class="col-sm-10">
+                        <input type="email" ng-model="user.emailId"
+                               class="form-control" id="email" placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <a href="" ng-click="update(user)" class="btn btn-primary btn-block">Update</a>
+                    </div>
+
+                </div>
+            </form>
+        </div>
     </div>
-    <!-- /#sidebar-wrapper -->
-
-    <button ng-click="toggleMenu()" class="btn btn-default" id="menu-toggle">
-        <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-    </button>
-    <!-- Page Content -->
-    <div id="page-content-wrapper">
-        <h1>Edit Profile</h1>
-        <hr>
-     <div class="col-xs-12">
-         <div class="row">
-             <!-- left column -->
-             <div class="col-md-3">
-                 <div class="text-center">
-                     <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
-                     <h6>Upload a different photo...</h6>
-
-                     <input type="file" class="form-control">
-                 </div>
-             </div>
-             <!-- edit form column -->
-             <div class="col-md-9 personal-info">
-                 <div class="alert alert-info alert-dismissable">
-                     <a class="panel-close close" data-dismiss="alert">×</a>
-                     <i class="fa fa-coffee"></i>
-                     This is an <strong>.alert</strong>. Use this to show important messages to the user.
-                 </div>
-                 <h3>Personal info</h3>
-
-                 <form class="form-horizontal" role="form">
-                     <div class="form-group">
-                         <div class="col-lg-8">
-                             <div class="input-group">
-                                 <input ng-model="user.username" type="text" ng-readonly="true"
-                                        class="form-control" placeholder="Username">
-                            <span class="input-group-addon">
-                            <i class="glyphicon glyphicon-user"></i>
-                            </span>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="form-group">
-                         <div class="col-lg-8">
-                             <div class="input-group">
-                                 <input ng-model="user.firstname" type="text"
-                                        class="form-control" placeholder="First name">
-                            <span class="input-group-addon">
-                            <i class="glyphicon glyphicon-user"></i>
-                            </span>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="form-group">
-                         <div class="col-lg-8">
-                             <div class="input-group">
-                                 <input ng-model="user.lastname" type="text"
-                                        class="form-control"  placeholder="Last name">
-                                <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-user"></i>
-                                </span>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="form-group">
-                         <div class="col-lg-8">
-                             <div class="input-group">
-                                 <input ng-model="user.email "type="email"
-                                        class="form-control" placeholder="Email">
-                                <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-envelope"></i>
-                                </span>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="form-group">
-                         <div class="col-lg-8">
-                             <div class="input-group">
-                                 <input ng-model="user.city" type="text"
-                                        class="form-control" placeholder="City">
-                                <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-map-marker"></i>
-                                </span>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="form-group">
-                         <div class="col-lg-8">
-                             <div class="input-group">
-                                 <input ng-model="user.password" type="password"
-                                        class="form-control" id="password" placeholder="Password">
-                            <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-lock"></i>
-                            </span>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="form-group">
-                         <div class="col-lg-8">
-                             <div class="input-group">
-                                 <input ng-model="user.vpassword" type="password"
-                                        class="form-control" id="vpassword" placeholder="Verify Password">
-                            <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-lock"></i>
-                            </span>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="form-group">
-                         <div class="col-lg-8">
-                             <input type="button" class="btn btn-primary" value="Save Changes">
-                             <span></span>
-                             <input type="reset" class="btn btn-default" value="Cancel">
-                         </div>
-                     </div>
-                 </form>
-             </div>
-         </div>
-
-     </div>
-
-    </div>
-    <!-- /#page-content-wrapper -->
-
 </div>
-
