--- a/public/experiments/angular/angular-api/css/half-slider.css
+++ b/public/experiments/angular/angular-api/css/half-slider.css
@@ -1,38 +1,72 @@
-/*!
- * Start Bootstrap - Half Slider HTML Template (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
-html,
-body {
-    height: 100%;
-}
-
-/* You can change the height of the carousel by changing the height in the class below. It is set to 50% by default, but can be any height! */
 
 .carousel {
-    height: 50%;
+    height: 500px;
+    margin-bottom: 60px;
 }
-
-.item,
-.active,
-.carousel-inner {
-    height: 100%;
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+    z-index: 10;
 }
-
-/* Background images are set within the HTML using inline CSS, not here */
-
-.fill {
+/* Declare heights because of positioning of img element */
+.carousel .item {
     width: 100%;
-    height: 100%;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    height: 500px;
+    background-color: #777;
+}
+.carousel-inner > .item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 500px;
+}
+@media (min-width: 768px) {
+    .carousel-caption p {
+        margin-bottom: 20px;
+        font-size: 21px;
+        line-height: 1.4;
+    }
+}
+img {
+    background: lightgray;
 }
 
-footer {
-    margin: 50px 0;
+
+.searchbox{
+    position: absolute;
+    top: 200px;
+    z-index: 1
+}
+
+.width-colxs12{
+    width : 110%;
+}
+
+/*Media Queries*/
+
+/* Smaller than standard 960 (devices and browsers) */
+@media only screen and (max-width: 959px) {}
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {}
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+    .margin-searchbox {
+        margin-bottom: 5px;
+    }
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {
+    .widthxsscreen {
+        margin-left: -34px;
+    }
+
+    .margin-set1{
+        margin-right: 15px;
+    }
 }
