--- a/public/project-next/css/style.css
+++ b/public/project-next/css/style.css
@@ -90,6 +90,14 @@ body {
 .width-colxs12{
     width : 110%;
 }
+
+.margin-panel{
+    margin-top: 20px;
+}
+.margin-well{
+    margin-left : 15px;
+    margin-right:15px;
+}
 /*!
  * Start Bootstrap - Portfolio Item HTML Template (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
