--- a/public/project-next/views/home/home.view.html
+++ b/public/project-next/views/home/home.view.html
@@ -1,76 +1,68 @@
-<div class="container-fluid-carousel" ng-controller="HomeController">
-    <!-- Carousel================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
-                <div class="row col-xs-12 searchbox width-colxs12 widthxsscreen">
-                    <div class="col-sm-5 col-md-5">
-                        <input ng-model="restname" type="text" class="form-control margin-searchbox"
-                               placeholder="Burger...Sushi(optional)"/>
-                    </div>
-                    <div class="col-sm-4 col-md-4">
-                        <input ng-model="loc" class="form-control margin-searchbox" placeholder="Boston"/>
-                    </div>
-                    <div class="col-sm-3 col-md-3">
-                        <button ng-click="callSearch(restname,loc)" class="btn btn-primary btn-block">Find Food</button>
-                    </div>
-
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="col-xs-offset-1 col-xs-10 col-sm-offset-2 col-sm-8 col-md-offset-3 col-md-6">
+            <div class="row col-xs-12 searchbox width-colxs12 widthxsscreen">
+                <div class="col-sm-5 col-md-5">
+                    <input ng-model="restname" type="text" class="form-control margin-searchbox"
+                           placeholder="Burger...Sushi(optional)"/>
                 </div>
-        </div>
-
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="/project/images/pizza.jpg" alt="" class="img-carousel img-responsive center-block">
-                <div class="container">
-                    <div class="carousel-caption">
-                    </div>
+                <div class="col-sm-4 col-md-4">
+                    <input ng-model="loc" class="form-control margin-searchbox" placeholder="Boston"/>
                 </div>
+                <div class="col-sm-3 col-md-3">
+                    <button ng-click="callSearch(restname,loc)" class="btn btn-primary btn-block">Find Food</button>
+                </div>
+
             </div>
-            <div class="item">
-                <img src="http://lorempixel.com/1500/800/food/3/" class="img-carousel img-responsive center-block">
-                <div class="container">
-                    <div class="carousel-caption">
-
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <img src="http://lorempixel.com/1500/800/food/4/" class="img-carousel img-responsive center-block">
-                <div class="container">
-                    <div class="carousel-caption">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <h3 class="carousel-caption">See favorite food place in your neighborhood</h3>
-
-
-        <!--<span class="left carousel-control" href="#carousel" role="button" data-slide="prev">Prev</span>-->
-        <!--<span class="right carousel-control" href="#carousel" role="button" data-slide="next">Next</span>-->
-
     </div>
-</div>
-<!--<div class="container-fluid">-->
-    <!--<div ng-controller="HomeController" id="slides_control">-->
-        <!--<div>-->
-            <!--<carousel interval="myInterval">-->
-                <!--<slide ng-repeat="slide in slides" active="slide.active">-->
-                    <!--<img ng-src="{{slide.image}}">-->
-                    <!--<div class="carousel-caption">-->
-                        <!--<h4>Slide {{$index+1}}</h4>-->
-                    <!--</div>-->
-                <!--</slide>-->
-            <!--</carousel>-->
+
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!--<div class="carousel-inner" role="listbox">-->
+        <!--<div class="item active">-->
+            <!--<img class="banner1" src="/project-next/images/food_1920x800.jpg" alt="Slide 1" />-->
+            <!--<div class="container">-->
+                <!--<div class="carousel-caption">-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="item">-->
+            <!--<img class="banner2" src="/project-next/images/taco_1920x800.jpg" alt="Slide 2" />-->
+            <!--<div class="container">-->
+                <!--<div class="carousel-caption">-->
+
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="item">-->
+            <!--<img class="banner3" src="/project-next/images/breakfast_1920x1080.jpg" alt="Slide 3" />-->
+            <!--<div class="container">-->
+                <!--<div class="carousel-caption">-->
+
+                <!--</div>-->
+            <!--</div>-->
         <!--</div>-->
     <!--</div>-->
-<!--</div>-->
-<!-- /.carousel -->
+    <!-- Items -->
+    <div class="carousel-inner">
+
+        <div class="item active">
+            <img class="banner1" src="/project-next/images/food_1920x800.jpg" alt="Slide 1" />
+        </div>
+        <div class="item">
+            <img class="banner2" src="/project-next/images/taco_1920x800.jpg" alt="Slide 2" />
+        </div>
+        <div class="item">
+            <img class="banner3" src="/project-next/images/breakfast_1920x1080.jpg" alt="Slide 3" />
+        </div>
+    </div>
+    <h3 class="carousel-caption">See favorite food place in your neighborhood</h3>
+</div>
+
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center home-pad">
