--- a/public/project-next/views/users/register.view.html
+++ b/public/project-next/views/users/register.view.html
@@ -8,85 +8,100 @@
                     <!--<label for="username" class="col-sm-2">Username:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input ng-model="user.firstname" type="text"
-                                   class="form-control" placeholder="First name">
                             <span class="input-group-addon">
-                            <i class="glyphicon glyphicon-user"></i>
-                            </span>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-sm-10 col-sm-offset-1">
-                        <div class="input-group">
-                            <input ng-model="user.lastname" type="text"
-                                   class="form-control"  placeholder="Last name">
-                                <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-user"></i>
-                                </span>
+                            </span>
+                            <input ng-model="registerControllerModel.user.firstname"
+                                   type="text"
+                                   class="form-control"
+                                   placeholder="First name"/>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input ng-model="user.email "type="email"
-                                   class="form-control" placeholder="Email">
-                                <span class="input-group-addon">
+                              <span class="input-group-addon">
+                                    <i class="glyphicon glyphicon-user"></i>
+                              </span>
+                            <input ng-model="registerControllerModel.user.lastname"
+                                   type="text"
+                                   class="form-control"
+                                   placeholder="Last name"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-10 col-sm-offset-1">
+                        <div class="input-group">
+                            <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-envelope"></i>
-                                </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-10 col-sm-offset-1">
-                        <div class="input-group">
-                            <input ng-model="user.city" type="text"
-                                   class="form-control" placeholder="City">
-                                <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-map-marker"></i>
-                                </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-10 col-sm-offset-1">
-                        <div class="input-group">
-                            <input ng-model="user.username" type="text"
-                                   class="form-control" placeholder="Username">
-                            <span class="input-group-addon">
-                            <i class="glyphicon glyphicon-user"></i>
                             </span>
+                            <input ng-model="registerControllerModel.user.email"
+                                   type="email"
+                                   class="form-control"
+                                   placeholder="Email"/>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input ng-model="user.password" type="password"
-                                   class="form-control" id="password" placeholder="Password">
+                              <span class="input-group-addon">
+                                    <i class="glyphicon glyphicon-map-marker"></i>
+                              </span>
+                            <input ng-model="registerControllerModel.user.city"
+                                   type="text"
+                                   class="form-control"
+                                   placeholder="City"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-10 col-sm-offset-1">
+                        <div class="input-group">
                             <span class="input-group-addon">
-                                <i class="glyphicon glyphicon-lock"></i>
+                                <i class="glyphicon glyphicon-user"></i>
                             </span>
+                            <input ng-model="registerControllerModel.user.username"
+                                   type="text"
+                                   class="form-control"
+                                   placeholder="Username"/>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input ng-model="user.vpassword" type="password"
-                                   class="form-control" id="vpassword" placeholder="Verify Password">
                             <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-lock"></i>
                             </span>
+                            <input ng-model="registerControllerModel.user.password"
+                                   type="password"
+                                   class="form-control"
+                                   id="password"
+                                   placeholder="Password"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-10 col-sm-offset-1">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <i class="glyphicon glyphicon-lock"></i>
+                            </span>
+                            <input ng-model="registerControllerModel.user.vpassword"
+                                   type="password"
+                                   class="form-control"
+                                   id="vpassword"
+                                   placeholder="Verify Password"/>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-sm-10">
-                        <a ng-click="register(user)" href="" class="btn btn-success btn-block">Sign Up</a>
+                        <a ng-click="registerControllerModel.register(registerControllerModel.user)"
+                           href="" class="btn btn-success btn-block">Sign Up</a>
                     </div>
                 </div>
                 <div class="form-group">
