--- a/public/project-next/views/users/forgotpassword.view.html
+++ b/public/project-next/views/users/forgotpassword.view.html
@@ -9,18 +9,19 @@
                     <!--<label for="username" class="col-sm-2">Username:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input type="text" class="form-control" id="username" placeholder="Email">
-                            <span class="input-group-addon">
-                            <i class="glyphicon glyphicon-envelope"></i>
+                             <span class="input-group-addon">
+                                <i class="glyphicon glyphicon-envelope"></i>
                             </span>
+                            <input type="text"
+                                   ng-model = "forgotPassModel.user.email"
+                                   class="form-control"
+                                   placeholder="Email"/>
                         </div>
-
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-sm-10">
                         <a href="#" class="btn btn-success btn-block">Submit</a>
-                        <!--<button type="submit" class="btn btn-default btn-block">Login</button>-->
                     </div>
                 </div>
                 <div class="form-group">
