--- a/public/project-next/views/users/login.view.html
+++ b/public/project-next/views/users/login.view.html
@@ -4,36 +4,36 @@
             <h2 class="page-header col-sm-offset-1 col-sm-10 text-center">Login</h2>
             <form class="form-horizontal">
                 <div class="form-group">
-                    <!--<label for="username" class="col-sm-2">Username:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input ng-model="user.username" type="text"
-                                   class="form-control" id="username"
-                                   placeholder="Username">
                             <span class="input-group-addon">
-                            <i class="glyphicon glyphicon-user"></i>
+                                <i class="glyphicon glyphicon-user"></i>
                             </span>
+                            <input ng-model="loginControllerModel.user.username" type="text"
+                                   class="form-control" id="username"
+                                   placeholder="Username"/>
                         </div>
-
                     </div>
                 </div>
                 <div class="form-group">
                     <!--<label for="password" class="col-sm-2">Password:</label>-->
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="input-group">
-                            <input ng-model="user.password" type="password"
-                                   class="form-control" id="password" placeholder="Password">
                             <span class="input-group-addon">
                                 <i class="glyphicon glyphicon-lock"></i>
                             </span>
+                            <input ng-model="loginControllerModel.user.password"
+                                   type="password"
+                                   class="form-control"
+                                   id="password" placeholder="Password"/>
                         </div>
                         <a href="#/forgotpassword"><p id="fpswd">(Forgot Password?)</p></a>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-1 col-sm-10">
-                        <a ng-click="login(user)" href="" class="btn btn-success btn-block top-margin">Login</a>
-                        <!--<button type="submit" class="btn btn-default btn-block">Login</button>-->
+                        <a ng-click="loginControllerModel.login(loginControllerModel.user)"
+                           href="" class="btn btn-success btn-block top-margin">Login</a>
                     </div>
                 </div>
                 <div class="form-group">
